--- a/src/MakePdf.Wpf/Views/Pages/EasyMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/EasyMode.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MakePdf.Wpf.Views.EasyMode.Input"
+﻿<UserControl x:Class="MakePdf.Wpf.Views.Pages.EasyMode"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MakePdf.Wpf.Views.EasyMode"
+             xmlns:local="clr-namespace:MakePdf.Wpf.Views.Pages"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d"
