--- a/src/MakePdf.Wpf/Views/Pages/Home.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/Home.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MakePdf.Wpf.Views.Home"
+﻿<UserControl x:Class="MakePdf.Wpf.Views.Pages.Home"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:MakePdf.Wpf.Views"
+             xmlns:local="clr-namespace:MakePdf.Wpf.Views.Pages"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
